--- a/lab1/vite-project/src/index.css
+++ b/lab1/vite-project/src/index.css
@@ -1,3 +1,42 @@
+/* src/styles/global.css */
+html, body {
+  height: 100%; /* Ustaw wysokość na 100% */
+  margin: 0; /* Usuń domyślne marginesy */
+}
+
+.layout {
+  display: flex; /* Ustawienie Flexbox */
+  flex-direction: column; /* Ustawienie kolumny */
+  min-height: 100vh; /* Minimalna wysokość na 100vh */
+}
+
+main {
+  flex: 1; /* Pozwól głównemu kontentowi zająć pozostałą przestrzeń */
+}
+
+footer {
+  background-color: #f8f9fa; /* Kolor tła dla stopki */
+  padding: 1rem; /* Padding */
+  text-align: center; /* Wyśrodkowanie tekstu */
+}
+.car-profile {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 16px;
+  margin: 10px;
+  background-color: #f9f9f9;
+}
+
+.car-profile h2 {
+  margin-top: 0;
+}
+
+.car-profile p {
+  margin: 4px 0;
+}
+
+
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
