--- a/lab1/vite-project/src/styles/Footer.css
+++ b/lab1/vite-project/src/styles/Footer.css
@@ -2,15 +2,15 @@
 footer {
     
     margin-top: auto;
-    background-color: #f8f9fa; /* Jasne tło */
-    padding: 20px; /* Wewnętrzny odstęp */
-    text-align: center; /* Wyśrodkowanie tekstu */
-    position: relative; /* Normalne umiejscowienie */
-    bottom: 0; /* Przyklejona do dołu */
+    background-color: #f8f9fa; 
+    padding: 20px; 
+    text-align: center; 
+    position: relative; 
+    bottom: 0; 
 }
 
 footer img {
-    width: 100px; /* Ustal szerokość obrazka */
-    height: auto; /* Automatyczna wysokość, aby zachować proporcje */
+    width: 100px; 
+    height: auto; 
     align-items: center;
 }
